--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@
   .MainC{
     position: relative;
     background: #f5f5f5;
-    height:100%;
+    height:100rem;
     width: calc(100% - 18rem);
     left: 18rem;
    
